# lectures-700

./: CMakeLists.txt  README.md
arrays/multi_arrays/: main.c
arrays/simple_array/: main.c
arrays/simple_strings/: main.c
character/: main.c
decisions/divide/: main.c
decisions/evenly_divisible/: main.c
decisions/simple_if_statement/: main.c
decisions/switch/: main.c
even_multiple/: main.c
functions/array_params/: main.c
functions/math_functions/: main.c
functions/static_variables/: main.c
functions/two_dim_function/: main.c
helloworld/: main.c
loops/digit_sum/: .main.c.swp  main.c
loops/incrementer/: main.c
loops/simple_for_loop/: main.c
loops/squares/: main.c
loops/triangular_number/: .main.c.swp  main.c
memory/array_malloc/: main.c
memory/complex_array/: main.c
memory/linked_list/: main.c
memory/simple_malloc/: main.c
pointers/simple_pointer/: main.c
pointers/string_pointers/: main.c
polynomial/: main.c
variables/celsius_to_fahrenheit/: main.c
variables/conversions/: main.c
variables/scientific_notation/: main.c
